// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customerSubscriptionUpdated exits if called on a non-trialing member 1`] = `
Object {
  "notification": Array [],
  "organization": Object {
    "createdAt": 2017-01-01T07:00:00.000Z,
    "creditCard": Object {
      "brand": "Visa",
      "expiry": "12/23",
      "id": "card_123",
      "last4": "4242",
      "number": "4242424242424242",
    },
    "id": 0,
    "name": "The Averagers, Inc.",
    "orgUsers": Array [
      Object {
        "id": 3,
        "inactive": false,
        "role": "billingLeader",
      },
      Object {
        "id": 4,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 5,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 6,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 7,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 8,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 9,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 10,
        "inactive": false,
        "role": null,
      },
    ],
    "periodEnd": 2017-01-31T07:00:00.000Z,
    "periodStart": 2017-01-01T07:00:00.000Z,
    "stripeId": 1,
    "stripeSubscriptionId": 2,
    "updatedAt": 2017-01-01T07:00:00.000Z,
  },
  "team": Object {
    "activeFacilitator": null,
    "facilitatorPhase": "lobby",
    "facilitatorPhaseItem": null,
    "id": 11,
    "isArchived": false,
    "isPaid": true,
    "meetingId": null,
    "meetingPhase": "lobby",
    "meetingPhaseItem": null,
    "name": "Team America",
    "orgId": 0,
  },
}
`;

exports[`customerSubscriptionUpdated exits if called on a non-trialing member 2`] = `
Object {
  "subscriptions": Array [
    Object {
      "application_fee_percent": null,
      "cancel_at_period_end": false,
      "canceled_at": null,
      "created": 1483257600,
      "current_period_end": 1485846000,
      "current_period_start": 1483254000,
      "customer": 1,
      "discount": null,
      "ended_at": null,
      "id": 2,
      "items": Object {
        "data": Array [
          Object {
            "created": 1483257600,
            "id": "si_123",
            "object": "subscription_item",
            "plan": Object {
              "amount": 500,
              "created": 1483257600,
              "currency": "usd",
              "id": "action-monthly",
              "interval": "month",
              "interval_count": 1,
              "livemode": false,
              "metadata": Object {},
              "name": "action-monthly",
              "object": "plan",
              "statement_descriptor": null,
              "trial_period_days": null,
            },
            "quantity": 8,
          },
        ],
        "has_more": false,
        "object": "list",
        "total_count": 1,
        "url": 12,
      },
      "livemode": false,
      "metadata": Object {
        "orgId": 0,
      },
      "object": "subscription",
      "plan": Object {
        "amount": 500,
        "created": 1483257600,
        "currency": "usd",
        "id": "action-monthly",
        "interval": "month",
        "interval_count": 1,
        "livemode": false,
        "metadata": Object {},
        "name": "action-monthly",
        "object": "plan",
        "statement_descriptor": null,
        "trial_period_days": null,
      },
      "quantity": 8,
      "start": 1483254000,
      "status": "active",
      "tax_percent": 0,
      "trial_end": null,
      "trial_start": null,
    },
  ],
}
`;

exports[`customerSubscriptionUpdated exits if it isn't a switch from trialing to active 1`] = `
Object {
  "notification": Array [],
  "organization": Object {
    "createdAt": 2017-01-01T07:00:00.000Z,
    "creditCard": Object {
      "brand": "Visa",
      "expiry": "12/23",
      "id": "card_123",
      "last4": "4242",
      "number": "4242424242424242",
    },
    "id": 0,
    "name": "The Averagers, Inc.",
    "orgUsers": Array [
      Object {
        "id": 3,
        "inactive": false,
        "role": "billingLeader",
      },
      Object {
        "id": 4,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 5,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 6,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 7,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 8,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 9,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 10,
        "inactive": false,
        "role": null,
      },
    ],
    "periodEnd": 2017-01-31T07:00:00.000Z,
    "periodStart": 2017-01-01T07:00:00.000Z,
    "stripeId": 1,
    "stripeSubscriptionId": 2,
    "updatedAt": 2017-01-01T07:00:00.000Z,
  },
  "team": Object {
    "activeFacilitator": null,
    "facilitatorPhase": "lobby",
    "facilitatorPhaseItem": null,
    "id": 11,
    "isArchived": false,
    "isPaid": true,
    "meetingId": null,
    "meetingPhase": "lobby",
    "meetingPhaseItem": null,
    "name": "Team America",
    "orgId": 0,
  },
}
`;

exports[`customerSubscriptionUpdated exits if it isn't a switch from trialing to active 2`] = `
Object {
  "subscriptions": Array [
    Object {
      "application_fee_percent": null,
      "cancel_at_period_end": false,
      "canceled_at": null,
      "created": 1483257600,
      "current_period_end": 1485846000,
      "current_period_start": 1483254000,
      "customer": 1,
      "discount": null,
      "ended_at": null,
      "id": 2,
      "items": Object {
        "data": Array [
          Object {
            "created": 1483257600,
            "id": "si_123",
            "object": "subscription_item",
            "plan": Object {
              "amount": 500,
              "created": 1483257600,
              "currency": "usd",
              "id": "action-monthly",
              "interval": "month",
              "interval_count": 1,
              "livemode": false,
              "metadata": Object {},
              "name": "action-monthly",
              "object": "plan",
              "statement_descriptor": null,
              "trial_period_days": null,
            },
            "quantity": 8,
          },
        ],
        "has_more": false,
        "object": "list",
        "total_count": 1,
        "url": 12,
      },
      "livemode": false,
      "metadata": Object {
        "orgId": 0,
      },
      "object": "subscription",
      "plan": Object {
        "amount": 500,
        "created": 1483257600,
        "currency": "usd",
        "id": "action-monthly",
        "interval": "month",
        "interval_count": 1,
        "livemode": false,
        "metadata": Object {},
        "name": "action-monthly",
        "object": "plan",
        "statement_descriptor": null,
        "trial_period_days": null,
      },
      "quantity": 8,
      "start": 1483254000,
      "status": "active",
      "tax_percent": 0,
      "trial_end": null,
      "trial_start": null,
    },
  ],
}
`;

exports[`customerSubscriptionUpdated handles a trial that just expired 1`] = `
Object {
  "notification": Array [
    Object {
      "id": 11,
      "orgId": 0,
      "startAt": 2017-01-01T08:00:00.000Z,
      "type": "TRIAL_EXPIRED",
      "userIds": Array [
        2,
      ],
      "varList": Array [
        2017-01-01T08:00:00.000Z,
      ],
    },
  ],
  "organization": Object {
    "createdAt": 2017-01-01T07:00:00.000Z,
    "creditCard": Object {},
    "id": 0,
    "name": "The Averagers, Inc.",
    "orgUsers": Array [
      Object {
        "id": 2,
        "inactive": false,
        "role": "billingLeader",
      },
      Object {
        "id": 3,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 4,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 5,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 6,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 7,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 8,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 9,
        "inactive": false,
        "role": null,
      },
    ],
    "periodEnd": 2017-01-01T08:00:00.000Z,
    "periodStart": 2017-01-01T07:00:00.000Z,
    "stripeId": 1,
    "stripeSubscriptionId": null,
    "updatedAt": 2017-01-01T07:00:00.000Z,
  },
  "team": Object {
    "activeFacilitator": null,
    "facilitatorPhase": "lobby",
    "facilitatorPhaseItem": null,
    "id": 10,
    "isArchived": false,
    "isPaid": false,
    "meetingId": null,
    "meetingPhase": "lobby",
    "meetingPhaseItem": null,
    "name": "Team America",
    "orgId": 0,
  },
}
`;

exports[`customerSubscriptionUpdated handles a trial that just expired 2`] = `Object {}`;
